Fix overlapping text in Pod Volumes table

--- a/frontend/public/style/coreos.css
+++ b/frontend/public/style/coreos.css
@@ -54,6 +54,10 @@
 .co-nowrap {
   white-space: nowrap; }
 
+.co-break-word {
+  overflow-wrap: break-word;
+}
+
 /* Animations */
 .co-an-fade-in-out {
   -webkit-transition-property: compact(opacity, false, false, false, false, false, false, false, false, false);
